# asgard-manager

./: Cargo.toml  DEPENDENCIES.md  create_signed_tests.sh
src/: lib.rs  vm_setup.rs  windows_bindings.rs
src/device_emulation/: block_device.rs  mod.rs  signals.rs
src/device_emulation/block_device/: linux.rs  mod.rs
src/kernel_setup/: linux_setup.rs  mod.rs  setup_utils.rs
src/os/: img_setup.rs
src/utils/: dependencies.rs  img_setup.rs  kernel_setup.rs  mod.rs
src/utils/signals/: linux.rs
src/vm_setup/: disk_setup.rs  linux_setup.rs  macos_setup.rs  mod.rs  setup_utils.rs  windows_setup.rs
tests/: mod.rs  vm_setup_tests.rs
tests/device_emulation_tests/: block_device_tests.rs  mod.rs
tests/device_emulation_tests/block_device_tests/: linux_tests.rs  mod.rs
tests/kernel_setup_tests/: linux_setup_tests.rs  mod.rs
tests/utils_tests/: dependencies_tests.rs  kernel_setup_tests.rs  mod.rs
tests/vm_setup_tests/: linux_setup_tests.rs  macos_setup_tests.rs  mod.rs  setup_utils_tests.rs  windows_setup_tests.rs
