[package]
name = "AsgardManager"
version = "0.1.0"
edition = "2024"

[dependencies]
# Optional platform-specific dependencies
applevisor = { version = "0.1.3", optional = true }  # Apple Silicon Hypervisor Framework bindings
kvm-ioctls = { version = "0.22.0", optional = true } # Linux KVM ioctl wrapper
kvm-bindings = { version = "0.7", optional = true }  # Linux KVM kernel bindings

# Common dependencies
tokio = { version = "1.45.0", features = ["full"] }
vm-memory = "0.13"

[features]
default = []
apple_darwin = ["applevisor"]
linux_kvm = ["kvm-ioctls", "kvm-bindings"]
