[package]
name = "AsgardManager"
version = "0.1.0"
edition = "2024"

[dependencies]
# Optional platform-specific dependencies
applevisor = { version = "0.1.3", optional = true }  # Apple Silicon Hypervisor Framework bindings
kvm-ioctls = { version = "0.22.0", optional = true } # Linux KVM ioctl wrapper
kvm-bindings = { version = "0.12.0", optional = true }  # Linux KVM kernel bindings
windows = { version = "0.61.0", features = ["Win32_System_Hypervisor", "Win32_System_SystemInformation"], optional = true } # Windows Hypervisor Platform wrapper

# Common dependencies
tokio = { version = "1.45.0", features = ["full"] }
vm-memory = { version = "0.13.0", features = ["backend-mmap"], optional = true}

[features]
default = []
apple_darwin = ["applevisor", "vm-memory"]
linux_kvm = ["kvm-ioctls", "kvm-bindings", "vm-memory"]
windows_hv = ["windows"]
