[package]
name = "AsgardManager"
version = "0.1.0"
edition = "2024"

[dependencies]
# Optional platform-specific dependencies
applevisor = { version = "0.1.3", optional = true }  # Apple Silicon Hypervisor Framework bindings
kvm-ioctls = { version = "0.22.0", optional = true } # Linux KVM ioctl wrapper
kvm-bindings = { version = "0.12.0", optional = true }  # Linux KVM kernel bindings
windows = { version = "0.61.0", features = ["Win32_System_Hypervisor", "Win32_System_SystemInformation", "Win32_System_Memory"], optional = true } # Windows Hypervisor Platform wrapper
virtio-queue = { version = "0.15.0", optional = true } # Virtio queue abstractions for virtualization
virtio-bindings = { version = "0.2.0", optional = true }   # Low-level Virtio device bindings
vm-memory = { version = "0.16.0", features = ["backend-mmap"], optional = true }  # VM memory abstractions with mmap support
vmm-sys-util = { version = "0.14.0", optional = true }
# Common dependencies
tokio = { version = "1.45.0", features = ["full"] }  # Async runtime with full features
memmap2 = { version = "0.9.0" } # Cross-platform memory mapping
reqwest = { version = "0.10.0", features = ["blocking"] } # For making HTTP requests

[features]
default = []
apple_darwin = ["applevisor", "vm-memory"]
linux_kvm = ["kvm-ioctls", "kvm-bindings", "vm-memory", "virtio-queue", "virtio-bindings", "vmm-sys-util"]
windows_hv = ["windows"]